# Bae

./: README.md  render.yaml
bae-backend/: .gitignore  CONTRACT_ADDRESS.txt  Cargo.toml  README.md  frontend-guide.md  package-lock.json  render.yaml
bae-backend/api-server/: Cargo.toml
bae-backend/api-server/src/: config.rs  main.rs  models.rs
bae-backend/api-server/src/blockchain/: mod.rs
bae-backend/api-server/src/handlers/: analytics.rs  babies.rs  health.rs  mod.rs  sensors.rs
bae-backend/backend-api/: .env.example  .gitignore  package.json  server.js
bae-backend/contracts/: .gitignore  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json
bae-backend/contracts/artifacts/contracts/BaeSensorRegistry.sol/: BaeSensorRegistry.dbg.json  BaeSensorRegistry.json
bae-backend/contracts/cache/: solidity-files-cache.json
bae-backend/contracts/contracts/: BaeSensorRegistry.sol
bae-backend/contracts/scripts/: deploy.js  register-device.js  verify-contract.js  verify-source.js  websocket-polyfill.js
bae-backend/contracts/typechain-types/: BaeSensorRegistry.ts  hardhat.d.ts  index.ts
bae-backend/contracts/typechain-types/factories/: BaeSensorRegistry__factory.ts  index.ts
bae-backend/docs/: DEPLOYMENT.md  backend_explanation_doc.md  bae_complete_doc.md  frontend_integration_complete.md
bae-backend/examples/: frontend-example.html  test-api.sh
bae-backend/gateway/: Cargo.toml
bae-backend/gateway/src/: blockchain_sender.rs  crypto.rs  main.rs
bae-backend/scripts/: generate-metadata.sh
bae-backend/sensor-simulator/: Cargo.toml
bae-backend/sensor-simulator/src/: main.rs
frontend/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
frontend/src/app/: error.tsx  globals.css  head.ts  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/lib/: Web3Provider.tsx  wagmi.ts
frontend/src/lib/abi/: BaeSensorRegistry.json
frontend/src/models/: reading.ts
frontend/src/ui/components/button/: Button.tsx
frontend/src/ui/components/header/: Header.tsx
frontend/src/ui/components/icons/: index.tsx
frontend/src/ui/layouts/section-container/: SectionContainer.tsx
frontend/src/ui/sections/dashboard/: BlockchainPanel.tsx  DashboardHeader.tsx  MetricsGrid.tsx  WellnessPanel.tsx
frontend/src/ui/sections/dashboard/charts/: CombinedChart.tsx  HumidityChart.tsx  TemperatureChart.tsx
frontend/src/ui/sections/hero-section/: HeroSection.tsx
frontend/src/ui/wallet/: ConnectWallet.tsx
