[workspace]
members = ["gateway", "sensor-simulator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bae Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws"] }
rumqttc = "0.24"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
