[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rumqttc.workspace = true
subxt.workspace = true
sp-core.workspace = true
sp-keyring.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
